Sidebar priority fixed on mobile too

--- a/assets/scss/layout/_admin.scss
+++ b/assets/scss/layout/_admin.scss
@@ -77,6 +77,7 @@ body {
 
     &--is-expanded {
       left: 0;
+      z-index: 2;
     }
   }
 
